# launchpad

./: .gitignore  Cargo.toml  LICENSE  README.md  config-local.yaml  config.yaml
.github/: copilot-instructions.md
pages/: 0  1
src/: audio.rs  colors.rs  config.rs  main.rs  midi.rs  referential.rs
src/backend/: mod.rs
src/launchpad/: mod.rs
